--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  width: 100%;
+  height: auto;
+  font-size: 18px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header{
+  position: fixed;
+  z-index: 10;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #121212;
   color: white;
+  width: 100%;
+  height: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+header .logo h1{
+  font-size: 32px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul li {
+  list-style: none;
+  display: inline-block;
+  margin-right: 30px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;
+  transition: all 0.2s;
+}
+
+nav ul li a:hover{
+  color: #c5e1f1;
+}
+
+.container {
+  padding-top: 120px;
+}
+
+.container h1 {
+  text-align: center;
+  font-size: 50px;
+}
+
+.profileImage {
+  object-fit: cover;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
+.service {
+  margin-top: 80px;
+  margin-bottom: 60px;
+}
+
+#skill img {
+  object-fit: cover;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  width: 100%;
+  max-width: 200px;
+  min-height: auto;
+}
+
+#skill a {
+  margin-bottom: 100px;
+  font-weight: bold;
+}
+
+footer{
+  width: 100%;
 }
